tests/ui/mismatched_types/closure-mismatch.current.stderr
error: implementation of `FnOnce` is not general enough
  --> $DIR/closure-mismatch.rs:12:5
   |
LL |     baz(|_| ());
   |     ^^^^^^^^^^^ implementation of `FnOnce` is not general enough
   |
   = note: closure with signature `fn(&'2 ())` must implement `FnOnce<(&'1 (),)>`, for any lifetime `'1`...
   = note: ...but it actually implements `FnOnce<(&'2 (),)>`, for some specific lifetime `'2`

error: implementation of `Fn` is not general enough
  --> $DIR/closure-mismatch.rs:12:5
   |
LL |     baz(|_| ());
   |     ^^^^^^^^^^^ implementation of `Fn` is not general enough
   |
   = note: closure with signature `fn(&'2 ())` must implement `Fn<(&'1 (),)>`, for any lifetime `'1`...
   = note: ...but it actually implements `Fn<(&'2 (),)>`, for some specific lifetime `'2`

error: implementation of `FnOnce` is not general enough
  --> $DIR/closure-mismatch.rs:16:5
   |
LL |     baz(|x| ());
   |     ^^^^^^^^^^^ implementation of `FnOnce` is not general enough
   |
   = note: closure with signature `fn(&'2 ())` must implement `FnOnce<(&'1 (),)>`, for any lifetime `'1`...
   = note: ...but it actually implements `FnOnce<(&'2 (),)>`, for some specific lifetime `'2`

error: implementation of `Fn` is not general enough
  --> $DIR/closure-mismatch.rs:16:5
   |
LL |     baz(|x| ());
   |     ^^^^^^^^^^^ implementation of `Fn` is not general enough
   |
   = note: closure with signature `fn(&'2 ())` must implement `Fn<(&'1 (),)>`, for any lifetime `'1`...
   = note: ...but it actually implements `Fn<(&'2 (),)>`, for some specific lifetime `'2`

error: aborting due to 4 previous errors

